Fix body textarea height on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -245,6 +245,7 @@ button  {
 	.input-body {
 		height: 70px;
 		padding-top: 0px;
+		min-height: 70px;
 	}
 
 	.site-header {
@@ -257,6 +258,3 @@ button  {
 	}
 
 }
-
-
-
